# perceive8

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 44a362fd3836_initial_tables.py
plans/: audio-chunking-improvement.md  chromadb-integration.md  conversation-analyzer-plan.md  google-drive-integration.md  rag-query-service.md  test-strategy.md
scripts/: benchmark_upload.py
services/: README.md
services/chat-ui/: .env.example  Dockerfile  README.md  app.py  chainlit.md  pyproject.toml
services/chat-ui/.chainlit/: config.toml
src/perceive8/: __init__.py  config.py  database.py  main.py
src/perceive8/models/: __init__.py  database.py  schemas.py
src/perceive8/providers/: __init__.py  base.py  factory.py  openai_whisper.py  pyannote.py  replicate.py
src/perceive8/routes/: analysis.py  benchmark.py  gdrive.py  health.py  query.py  speakers.py
src/perceive8/services/: __init__.py  analysis.py  embedding.py  enhancement.py  gdrive.py  pipeline.py  preprocessing.py  query.py  storage.py
src/perceive9/: __init__.py  config.py  main.py
src/perceive9/providers/: __init__.py  base.py  factory.py  openai_whisper.py  pyannote.py  replicate.py
src/perceive9/routes/: analysis.py  benchmark.py  speakers.py
tests/: __init__.py  conftest.py  test_config.py  test_embedding.py  test_gdrive.py  test_health.py  test_integration.py  test_pipeline.py  test_providers.py  test_query.py  test_routes.py
tests/fixtures/: invalid_audio.txt
