[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perceive8"
version = "0.1.0"
description = "API service for analyzing audio recordings with speaker identification and transcription"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "chromadb>=0.4.22",
    "openai>=1.10.0",
    "replicate>=0.22.0",
    "httpx>=0.26.0",
    "pydub>=0.25.1",
    "noisereduce>=3.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/perceive8"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
